2004-10-11  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_rope.h: add typename.

2004-10-08  Francois Dumont  <dums@stlport...>

	* stlport/stl/_deque.h, _hashtable.h, _tree.h, _bvector.h: Specialization of the
	__type_traits struct for the iterator types.
	
	* stlport/stl/_uninitialized.h, _vector.h: Relax of the rules to perform some 
	optimizations, no more POD check, rather use of the trivial copy constructor, 
	trivial assignment operator informations.
	
	* stlport/stl/_config.h, _epilog.h: Adoption of stlport as the official STLport
	namespace when users cannot use the std namespace.
	
2004-10-07  Francois Dumont  <dums@stlport...>

	* stlport/stl/_list.h: Specialization of the __type_traits struct for list iterators.
	Move of the == and != operators from the base iterator class to the iterator class
	to make iterator of different list instanciation not comparable anymore.
	
	* stlport/stl/_slist.h: ditto.
	
2004-10-06  Francois Dumont  <dums@stlport...>

	* stlport/stl/_rope.h, _rope.c: Code review, use of general STLport tools rather
	than specific rope ones. Use of compile time checks rather than runtime.
	
	* stlport/stl/_bvector.h: fix to make the vector<bool> specialization movable
	thanks a Kelly Thompson report.
	
2004-10-05  Francois Dumont  <dums@stlport...>

	* src/explore/Makefiles/nmake: Application of a patch from Mickeal Fink to simplify
	the evc make system.
	
	* doc/README.evc4: New version from Zdenek Nemec.
	
2004-10-04  Francois Dumont  <dums@stlport...>

	* test/unit/type_traits_test.cpp: A new test case to check behavior of
	the numerous helper functions from type_traits.h and type_manips.h.
	
	* stlport/stl/type_traits.h: Fix of some bugs and addition of the __type_traits
	specializations of const, volatile and const volatile native types.
	
	* stlport/stl/type_manips.h: Modification of the __bool2type default value
	so that it concider any value as true and only the 0 value false.
	