@@ -40,7 +40,7 @@
 _STLP_BEGIN_NAMESPACE
 
 //Specific iterator traits creation
-_STLP_CREATE_ITERATOR_TRAITS(SetTraitsT, Const_traits);
+_STLP_CREATE_ITERATOR_TRAITS(SetTraitsT, Const_traits)
 
 template <class _Key, __DFL_TMPL_PARAM(_Compare,less<_Key>), 
                      _STLP_DEFAULT_ALLOCATOR_SELECT(_Key) >
@@ -211,7 +211,7 @@ public:
 };
 
 //Specific iterator traits creation
-_STLP_CREATE_ITERATOR_TRAITS(MultisetTraitsT, Const_traits);
+_STLP_CREATE_ITERATOR_TRAITS(MultisetTraitsT, Const_traits)
 
 template <class _Key, __DFL_TMPL_PARAM(_Compare,less<_Key>), 
                      _STLP_DEFAULT_ALLOCATOR_SELECT(_Key) >
